--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^2.9.4",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
