--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/express": "^4.17.8",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.4",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "password-hash": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.1",
