--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/chart.js": "^2.9.27",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.3",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.4",
     "cookie-parser": "^1.4.5",
