--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.9.2",
     "mysql": "^2.18.1",
     "password-hash": "^1.2.2"
   },
